fix: apply flex wrap to box row
The row of boxes trigger a horizontal scroll bar
when the web browser is size down due to content
overflow. Apply flex wrap to wrap the boxes when they
meet the end of the viewport's width.

--- a/css/style.css
+++ b/css/style.css
@@ -117,11 +117,13 @@ button,
 }
 
 .box-row {
-    max-width: 659px;
+    justify-content: center;
+    flex-wrap: wrap;
     gap: 16px;
 }
 
 .box-with-text {
+    width: 150px;
     text-align: center;
     display: flex;
     flex-direction: column;
